--- a/.cproject
+++ b/.cproject
@@ -60,8 +60,11 @@
 			<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
 			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 			<storageModule moduleId="com.nvidia.cuda.ide.build.project.ICudaProjectConfiguration">
-				<executable devicelink="true"/>
-				<editor-arch major="1" minor="0"/>
+				<executable devicelink="true">
+					<sass major="2" minor="1"/>
+					<sass major="2" minor="0"/>
+				</executable>
+				<editor-arch major="2" minor="1"/>
 			</storageModule>
 		</cconfiguration>
 		<cconfiguration id="cuda.toolchain.configuration.release.425017883">
